Fixed dot shadow alignment

--- a/src/components/home/Hero/Hero.css
+++ b/src/components/home/Hero/Hero.css
@@ -102,6 +102,7 @@
 
   .hero-sec__dot {
     font-size: 25px;
+    text-shadow: 3px -2px 1px rgba(0, 0, 0, 0.13);
   }
 }
 
@@ -139,5 +140,6 @@
 
   .hero-sec__dot {
     font-size: 22px;
+    text-shadow: 2.5px -2px 1px rgba(0, 0, 0, 0.13);
   }
 }
